WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89403
The CSS_WRAP_SHAPE CSSWrapShape::Type is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=89403
Summary
The CSS_WRAP_SHAPE CSSWrapShape::Type is no longer needed
Hans Muller
Reported
2012-06-18 16:48:02 PDT
The CSS_WRAP_SHAPE_PATH definition should be removed from CSSWrapShapes.h. It's no longer required by the CSS Exclusions spec -
http://dev.w3.org/csswg/css3-exclusions/#shapes
.
Attachments
Patch
(1.28 KB, patch)
2012-06-18 19:36 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
Patch
(1.28 KB, patch)
2012-06-18 22:11 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
Patch
(1.31 KB, patch)
2012-06-19 10:39 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Hans Muller
Comment 1
2012-06-18 16:55:17 PDT
I will upload a patch shortly.
Hans Muller
Comment 2
2012-06-18 19:36:25 PDT
Created
attachment 148227
[details]
Patch
WebKit Review Bot
Comment 3
2012-06-18 19:40:34 PDT
Attachment 148227
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Hans Muller
Comment 4
2012-06-18 22:11:35 PDT
Created
attachment 148247
[details]
Patch
Eric Seidel (no email)
Comment 5
2012-06-19 10:14:22 PDT
Comment on
attachment 148247
[details]
Patch LGTM.
WebKit Review Bot
Comment 6
2012-06-19 10:16:27 PDT
Comment on
attachment 148247
[details]
Patch Rejecting
attachment 148247
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12991034
Eric Seidel (no email)
Comment 7
2012-06-19 10:29:31 PDT
Comment on
attachment 148247
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148247&action=review
You'll need to upload a new patch or wait until
bug 67935
is resolved. :)
> Source/WebCore/ChangeLog:5 > +
Looks like you remove the Reviewed by Nobody (OOPS!). line which prepare-ChangeLog inserts (and the commit-queue/webkit-patch knows to look for and fill-in when landing patches for you). Without that line, the commit-queue won't work for you. :(
Bug 67935
exists to solve this common error. :( Sorry!
Eric Seidel (no email)
Comment 8
2012-06-19 10:31:04 PDT
Comment on
attachment 148247
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148247&action=review
> Source/WebCore/ChangeLog:1 > +2012-06-18 Hans Muller <
hmuller@adobe.com
>
The ChangeLog should be able to handle ü if your last name actually contains one. :) You might want to chat with Tor Arne Vestø to check the current status of our tools unicode support though. :)
Hans Muller
Comment 9
2012-06-19 10:39:05 PDT
Created
attachment 148357
[details]
Patch
Hans Muller
Comment 10
2012-06-19 10:42:23 PDT
Restored the 'Reviewed by NOBODY (OOPS!)' line I'd inadvertently deleted from the ChangeLog. Perfection still eludes me :-).
Eric Seidel (no email)
Comment 11
2012-06-19 14:59:52 PDT
Comment on
attachment 148357
[details]
Patch LGTM.
WebKit Review Bot
Comment 12
2012-06-19 15:49:34 PDT
Comment on
attachment 148357
[details]
Patch Clearing flags on attachment: 148357 Committed
r120764
: <
http://trac.webkit.org/changeset/120764
>
WebKit Review Bot
Comment 13
2012-06-19 15:49:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug