The CSS_WRAP_SHAPE CSSWrapShape::Type is no longer needed https://bugs.webkit.org/show_bug.cgi?id=89403

Patch by Hans Muller <hmuller@adobe.com> on 2012-06-19
Reviewed by Eric Seidel.

Removed CSS_WRAP_SHAPE_PATH definition from CSSWrapShapes.h.
It's no longer required. This definition was never used or
tested, no new tests are required.

* css/CSSWrapShapes.h:

Canonical link: https://commits.webkit.org/107369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120764 268f45cc-cd09-0410-ab3c-d52691b4dbfc